# AeroMAPS

./: .buildinfo  .gitignore  CHANGELOG.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_PLOT_FIXES_SUMMARY.md  FINAL_TEST_REPORT.md  FLEET_PUSH_INTEGRATION_PLAN.md  FLEXIBLE_START_YEAR_PLAN.md  HANDOFF_PHASE5_MARKETS_YAML.md  IMPLEMENTATION_SUMMARY.md  MULTI_SCENARIO_PLOT_FIXES.md  PHASE_3_STATUS.md  PHASE_3_SUBPLAN.md  PHASE_INTERFACE_SUMMARY.md  PLOT_FIXES_SUMMARY.md  PROCESS_AND_PATHWAYS_FIXES.md  PYTHON310_SETUP_SUMMARY.md  README.md  README.rst  REFACTOR_MARKETS_PLAN.md  TESTING_SUMMARY.md  TEST_STATUS_SUMMARY.md  about.html  citations.html  conftest.py  documentation.html  documentation_airtransport.html  documentation_architecture.html  documentation_impacts.html  examples.html  genindex.html  installation.html  intro.html  markdown-notebooks.html  markdown.html  mkdocs.yml  notebooks.html  objects.inv  pyproject.toml  (+5 more)
.github/: computation_time_monitoring.yml
.github/workflows/: build_release.yml  computation_time_monitoring.yml  deploy_book.yml  deploy_docs.yml  test_notebooks.yml  tests.yml  watchdog_tests.yml
_sources/: citations.md  documentation.md  installation.md  intro.md
_sources/books/: _changelog.md  about.md  api.md  citations.md  documentation.md  documentation_airtransport.md  documentation_architecture.md  documentation_gui.md  documentation_impacts.md  documentation_reference_data.md  documentation_software.md  examples.ipynb  examples.md  examples_basic.ipynb  examples_fleet.ipynb  examples_joas_application.ipynb  examples_mea_application.ipynb  installation.md  license.md
aerocm_integration/: 404.html  index.html  objects.inv  sitemap.xml
aerocm_integration/api/: index.html
aerocm_integration/books/: index.html
aerocm_integration/full_doc/: index.html
aerocm_integration/search/: search_index.json
aeromaps/: __init__.py  app.ipynb  app.py  config.json
aeromaps/conf/: config.py  config.yaml
aeromaps/core/: __init__.py  cli.py  config.json  gemseo.py  models.py  multi_process.py  multi_regional_process.py  process.py  processes.py  processes_assembly.py
aeromaps/gui/: config.json  config.yaml  fleet.py  graphical_user_interface.py  gui.ipynb  plots.py
aeromaps/models/: __init__.py  base.py  constants.py  parameters.py  templates.py  yaml_interpolator.py
aeromaps/notebooks/: AeroMAPS-ecs_dev.ipynb  TPD.ipynb  aeromaps_data.xlsx  basic_example.ipynb  basic_example_lausanne.ipynb  basic_example_mod.ipynb  botom_up_bio.ipynb  example_cummac.ipynb  example_dev_test.ipynb  example_optim_coupled.ipynb  examples_basic.ipynb  examples_climate.ipynb  examples_climate_application.ipynb  examples_custom_models.ipynb  examples_custom_process.ipynb  examples_elasticity.ipynb  examples_elasticity_SD.ipynb  examples_elasticity_idf.ipynb  examples_elasticity_repeat.ipynb  examples_fleet.ipynb  examples_joas_application.ipynb  examples_life_cycle_assessment-tsas.ipynb  examples_life_cycle_assessment-xarray.ipynb  examples_life_cycle_assessment.ipynb  examples_macc_application.ipynb  examples_mea_application.ipynb  examples_optim_application-complex-surplus-superbest_converged.ipynb  examples_optim_application-complex.ipynb  examples_optim_application.ipynb  examples_partitioning.ipynb  examples_phd_antoine.ipynb  examples_tsas_application.ipynb  examples_tsas_optim.ipynb  fleet.ipynb  fleet2.ipynb  fleet_lausanne-Copy1.ipynb  fleet_lausanne.ipynb  joas_application.ipynb
aeromaps/plots/: __init__.py  air_traffic.py  aircraft_energy.py  aircraft_fleet_and_operations.py  climate.py  costs.py  costs_generic.py  emissions.py  energy_resources.py  health_impacts.py  indicators.py  macc.py  main.py  multi_scenario_plot.py  single_scenario_plot.py  sustainability_assessment.py
aeromaps/utils/: data_information.py  defaults.py  energy_aggregation.py  functions.py  single_region.py  units.py  yaml.py
binder/: postBuild  requirements.txt
books/: _changelog.html  about.html  api.html  bibliography.html  citations.html  documentation.html  documentation_airtransport.html  documentation_architecture.html  documentation_gui.html  documentation_impacts.html  documentation_reference_data.html  documentation_software.html  examples.html  examples_basic.html  examples_climate_application.html  examples_custom_process.html  examples_figures.html  examples_fleet.html  examples_joas_application.html  examples_mea_application.html  examples_partitioning.html  installation.html  license.html  markdown-notebooks.html  markdown-notebooks2.html  markdown.html  notebooks.html
docs/: _config.yml  _toc.yml  citations.md  conf.py  documentation.md  documentation_architecture.md  documentation_impacts.md  index.md  index.rst  intro.md  multi_scenario_comparison.md  references.bib  required_outputs_feature.md  requirements.txt  scenario_grouping_guide.md
docs/api/: aeromaps.core.md  aeromaps.core.models.md  aeromaps.core.process.md  aeromaps.core.rst  aeromaps.gui.graphical_user_interface.md  aeromaps.gui.md  aeromaps.gui.rst  aeromaps.md  aeromaps.models.air_transport.air_traffic.ask.md  aeromaps.models.air_transport.air_traffic.md  aeromaps.models.air_transport.air_traffic.price_elasticity.md  aeromaps.models.air_transport.md  (+74 more)
docstring_completion/: 404.html  index.html  objects.inv  sitemap.xml
examples/: multi_scenario_advanced_example.py  multi_scenario_example.py
fleet_refactoring/: 404.html  index.html  objects.inv  sitemap.xml
latest/: 404.html  index.html  objects.inv  sitemap.xml
notebooks_test/: examples_basic.ipynb
refactoring_plans/: FLEET_PUSH_INTEGRATION_PLAN.md  REFACTOR_MARKETS_PLAN.md
tests/: __init__.py  test_fleet_aircraft_ordering.py  test_fleet_assignment_market_iteration.py  test_fleet_custom_markets.py  test_fleet_model_regression.py  test_fleet_perf_mode_validation.py  test_fleet_performance_market_iteration.py  test_multi_regional_aggregation.py  test_multi_regional_global_plot.py
v1.0.0/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  references.bib  requirements.txt  sitemap.xml
(+2613 files in other folders)
