[tool.black]
line-length = 100

[tool.poetry]
name = "aeromaps"
version = "0.1.0-beta"
description = "AeroMAPS: Multidisciplinary Assessment of Prospective Scenarios for air transport"
readme = "README.md"
authors = [
    "Thomas PLANES <thomas.planes@isae-supaero.fr>",
    "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
    "Antoine SALGAS <antoine.salgas@isae-supaero.fr>",
]
keywords = [
    "air transport",
    "climate change",
    "prospective scenarios",
    "energy issues",
]
license = "GPL-3.0-only"
homepage = "https://github.com/AeroMAPS/AeroMAPS"

[tool.poetry.dependencies]
# Core and standard libraries
python = "^3.8.0, <3.11"
numpy = "^1.20.3"
scipy = "^1.4.1"
pandas = "^1.1.0"
xlrd = "1.2.0"
openpyxl = "^3.1.2"
gemseo = "^5.0"

# Data visualization
matplotlib = "^3.7"
ipympl = "^0.9.3"
plotly = "^5.0.0"

# Graphical User Interface
markdown = "^3.4.3"
aenum = "^3.1.12"
docstring-inheritance = "^1.0.0"
dacite = "^1.8.0"
fair = "2.1.4"
jupyterlab = "^3.3.0"
ipywidgets = "^8.0.6"
ipysheet = ">=0.5.0, <1"
ipydatagrid = "^1.1.14"
ipytree = "^0.2.2"

# Web deployment
voila = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
coverage = { extras = ["toml"], version = "^5.5" }
pre-commit = "^2.14.1"
black = { version = "22.3.0", extras = ["jupyter"], allow-prereleases = true }
pylint = "^2.10.2"
nbval = "^0.9.6"

[tool.poetry.scripts]
    aeromaps = "aeromaps.app:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"