[tool.poetry]
name = "aeromaps"
version = "0.9.0-beta"
description = "AeroMAPS: Multidisciplinary Assessment of Prospective Scenarios for air transport"
readme = "README.md"
authors = [
    "Thomas PLANES <thomas.planes@isae-supaero.fr>",
    "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
    "Antoine SALGAS <antoine.salgas@isae-supaero.fr>",
    "Felix POLLET <felix.pollet@isae-supaero.fr>",
]
keywords = [
    "air transport",
    "climate change",
    "prospective scenarios",
    "energy issues",
]
license = "GPL-3.0-only"
homepage = "https://github.com/AeroMAPS/AeroMAPS"

[tool.poetry.dependencies]
# Core and standard libraries
python = ">=3.10, <3.12"
numpy = "^1.20.3"
scipy = "^1.4.1"
pandas = ">=1.3.0,<=2.2.2"
xlrd = "1.2.0"
openpyxl = "^3.1.2"
gemseo = "<6.3.0"
deepdiff = "^8"
sympy = "^1.14.0"

# External models
aerocm = "0.1.1b0"

# Data visualization
matplotlib = "^3.7"
ipympl = "^0.9.3"
plotly = "^5.0.0"

# Graphical User Interface
markdown = "^3.4.3"
aenum = "^3.1.12"
docstring-inheritance = "^2.0.0"
dacite = "^1.8.0"
jupyterlab = "^3.3.0"
ipywidgets = "^8.0.6"
ipysheet = ">=0.5.0, <1"
ipydatagrid = "^1.1.14"
ipytree = "^0.2.2"

# Web deployment
voila = "^0.5.0"

# Optional dependencies
lca-modeller = {version = "*", python = ">=3.10, <3.12", optional = true}

[tool.poetry.extras]
lca = ["lca-modeller"]


[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = { version = "^7.0", extras = ["toml"] }
nbval = "^0.11"
wrapt = "^1.16.0"
nbmake = "^1.5.0"
pytest-xdist = "^3.7.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-bibtex = "^2.16.0"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.7.0"
mkdocstrings = { version = "^0.30.0", extras = ["python"] }
mike = "^2.0.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.5.0"
nbstripout = "^0.6.0"
ruff = "0.5.4"

[tool.poetry.scripts]
    aeromaps = "aeromaps.core.cli:main"

# Dynamic versioning settings ==================================================
# poetry-dynamic-versioning has to be installed in the same environment as
# Poetry (normally outside your project environment).
# see https://github.com/mtkennerly/poetry-dynamic-versioning#installation
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

# Packaging system =============================================================
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"